# zero2prod

./: Cargo.toml  Makefile  README.md  justfile
.github/workflows/: general.yml
scripts/: init.sql  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: greet.rs  health_check.rs  mod.rs  subscription.rs
tests/: health_check.rs  subscribe.rs
