[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Dante Kelly <dante@dantekelly.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-async-std-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
